tests/sema/fail/v4_fail_pseudo_builtin_redefinition.ep
# COMPILE_FAIL: reserved builtin function name: argv
fun argv(): i64 {
    return 1
}

fun main(): i64 {
    return 0
}
